--- a/style.css
+++ b/style.css
@@ -1,3 +1,95 @@
-h1 {
-    color: blue;
+/* https://unsplash.com/photos/photo-of-green-fern-plant-OOE4xAnBhKo */
+
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+US+Modern:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+body {
+    box-sizing: border-box;
+    font-family: "poppins", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1rem;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: /* url(./images/teemu-paananen-OOE4xAnBhKo-unsplash.jpg) */ ;
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+}
+
+div {
+    border: 2px solid purple;
+}
+
+.main-container {
+    border: 1px solid blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1440px;
+    height: 1024px;
+    margin: 0;
+    padding: 0;
+}
+.left-container {
+    border: 2px solid yellow;
+    width: 36%;
+    height: 100%;
+    /* background: url(./images/teemu-paananen-medium.jpg); */
+}
+
+.right-container {
+    border: 2px solid red;
+    width: 64%;
+    height: 100%;
+    background-color: oklch(97% 0.5% 270);
+    padding: 0;
+    margin: 0; 
+}
+section {
+    border: 5px solid rgb(0, 255, 81);
+    height: fit-content;
+    padding: 0;
+    margin: 0 3rem 0 3rem ;
+    
+}
+.section-1 {
+    margin-top: 10rem;
+}
+
+h2 {
+    margin-left: 0;
+}
+
+h3 {
+    /* border: 1px solid blue; */
+    /* justify-self: center; */
+    width: 69%;
+    height: 100%;
+    margin: 0rem 16rem 4rem 0rem;
+    
+}
+
+fieldset {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.input-block {
+    
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    
+}
+
+input {
+    width: 16rem;
+    height: 1.5rem;
 }
