Checkpoint save: Sign-up form project progress.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     align-items: center;
     flex-direction: column;
     background-image: /* url(./images/teemu-paananen-OOE4xAnBhKo-unsplash.jpg) */ ;
-    background-color: black;
+    /* background-color: black; */
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
@@ -80,13 +80,13 @@ h3 {
 }
 
 fieldset {
-    /* border: 1px solid red; */
+    border: none;
     display: flex;
     justify-content: start;
     align-items: center;
     margin: 0 0 1rem 0;
     padding: 0;
-    box-shadow: ;
+    /* box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.805); */
 }
 
 .input-block {
@@ -104,9 +104,27 @@ input {
     border-radius: 6px;
     border: 1px solid #E5E7EB;
     border-width: 0.1px;
+    /* border: 3px solid green; */
 }
+
+input:focus {
+    border: 2px solid #1c60e7;
+    box-shadow: 2px 4px 6px oklch(75% 1% 120 / 50%); 
+    
+}
+
+input:invalid {
+    border: 1px solid red;   
+}
+
+input:valid {
+    border: 1px solid #E5E7EB
+}
+
 .section-2 {
     background-color: #ffffff;
+    /* border: 3px solid blue; */
+    box-shadow: 0px 6px 9px oklch(69% 1% 120 / 50%);
    
 }
 
@@ -115,9 +133,16 @@ button {
     padding: 0.5rem 3rem;
     font-size: 1.2rem;
     border-radius: 6px;
-    background-color: green;
+    background-color: oklch(50% 39% 143); 
     margin: 2rem 0 2rem  0;
     font-family: inherit;
+    color: #ffffff;
+    border: none;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: oklch(40% 60% 143)
 }
 
 a, href{
@@ -125,7 +150,8 @@ a, href{
     text-decoration: none;
 }
 
-.call-to-action {
+.cta-section {
+    margin: 2rem 0;
     background-color: oklch(97% 0.5% 270);
     
-}
+} 
