--- a/style.css
+++ b/style.css
@@ -23,6 +23,29 @@ div {
     /* border: 2px solid purple; */
 }
 
+.banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 14%;
+    background-color: oklch(0% 0 0 / 50%);
+    margin: 10rem 0 0 0;
+    color: #ffffff;
+    font-size: 50px ;
+}
+.footer-credit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 624px 0 0 0;
+    font-family: poppins;
+    color: #ffffff; 
+    font-size: 6px;
+    font-weight: lighter;
+}
+
 .main-container {
     /* border: 1px solid blue; */
     display: flex;
