Checkpoint save: Sign-up form project almost done. - optimized background image size. - Polishing design before final version.

--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ div {
     width: 36%;
     height: 100%;
     background: url(./images/teemu-paananen-low.jpg);
-    background-size:cover ;
+    background-size: none;
+    background-position-y: bottom;
     background-repeat: no-repeat; 
 }
 
