--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     box-sizing: border-box;
     font-family: "poppins", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1rem;
+    width: 1440px;
+    min-width: fit-content;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -48,7 +50,8 @@ div {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1440px;
+    min-width: fit-content;
+    /* width: 1440px; */
     height: 1024px;
     margin: 0;
     padding: 0;
