--- a/style.css
+++ b/style.css
@@ -2,13 +2,24 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+US+Modern:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+    font-family: 'Norse';
+    src: url('./fonts/Norse-Bold.woff2') format('woff2'),
+        url('./fonts/Norse-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 
 body {
     box-sizing: border-box;
-    font-family: "poppins", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1rem;
-    width: 1440px;
-    min-width: fit-content;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.3rem;
+    /* width: 1440px; */
+    min-width: 100%;
+    height: 1080px; 
     margin: 0;
     display: flex;
     justify-content: center;
@@ -30,34 +41,35 @@ div {
     width: 100%;
     height: 14%;
     background-color: oklch(0% 0 0 / 50%);
-    margin: 10rem 0 0 0;
+    margin: 12.9rem 0 0 0;
     color: #ffffff;
-    font-size: 50px ;
+    font-family: Norse;
+    font-size: 54px ;
 }
 .footer-credit {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 624px 0 0 0;
-    font-family: poppins;
+    margin: 760px 0 0 0;
+    font-family: "poppins", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #ffffff; 
-    font-size: 6px;
-    font-weight: lighter;
+    font-size: 0.9rem;
+    font-weight: 300;
 }
 
-.main-container {
+div.main-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: fit-content;
+    min-width: 100%; 
     /* width: 1440px; */
-    height: 1024px;
-    margin: 0;
+    height: 1200px; 
+    margin: auto;
     padding: 0;
 }
 .left-container {
-    width: 36%;
+    width: 25%;
     height: 100%;
     background: url(./images/teemu-paananen-low.jpg);
     background-size: none;
@@ -66,7 +78,7 @@ div {
 }
 
 .right-container {
-    width: 64%;
+    width: 75%;
     height: 100%;
     background-color: oklch(97% 0.5% 270);
     padding: 0;
@@ -89,14 +101,17 @@ section {
 }
 
 h2 {
-    margin-left: 0;
+    margin: 0 0 0 0;
+    font-family: "poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+
 }
 
 h3 {
     /* justify-self: center; */
-    width: 80%;
+    min-width: 82%;
     height: 100%;
-    margin: 0rem 16rem 4rem 0rem;
+    margin: 0rem 16rem 4rem 0rem; 
     
 }
 
@@ -116,21 +131,35 @@ fieldset {
     align-items: start;
     flex-direction: column;
     
+    
 }
 
 input {
     width: 16rem;
-    height: 1.8rem;
+    height: 2rem;
+    padding-left: 1rem; 
     border-radius: 6px;
     border: 1px solid #E5E7EB;
     border-width: 0.1px;
+    font-family: "poppins", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 600;
+    letter-spacing: 0.06rem;
+}
+
+label {
+    font-family: "poppins", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 0.9rem;
+    letter-spacing: 0.1rem;
+    color: oklch(50% 0% 143);
 }
 
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="tel"]:focus,
 input[type="password"]:focus {
-    border: 1px solid #1c60e7;
+    border: 2px solid #1c60e7;
     box-shadow: 2px 4px 6px oklch(75% 1% 120 / 50%);
     outline: none; 
     
@@ -161,7 +190,8 @@ button {
     background-color: oklch(50% 39% 143); 
     margin: 2rem 0 2rem  0;
     font-family: inherit;
-    color: #ffffff;
+    font-weight: 500;
+    color: oklch(95% 6% 143);
     border: none;
 }
 
@@ -171,7 +201,12 @@ button:hover {
 }
 
 a, href{
-    color: green;
+    color: oklch(50% 39% 143);
+    text-decoration: none;
+}
+
+.footer-credit a, href{
+    color: oklch(100% 0% 143);
     text-decoration: none;
 }
 
