--- a/style.css
+++ b/style.css
@@ -184,8 +184,8 @@ input:valid {
 
 
 button {
-    padding: 0.75rem 3rem;
-    font-size: 1.2rem;
+    padding: 0.90rem 3.9rem;
+    font-size: 1.4rem;
     border-radius: 9px;
     background-color: oklch(50% 39% 143); 
     margin: 2rem 0 2rem  0;
@@ -193,6 +193,7 @@ button {
     font-weight: 500;
     color: oklch(95% 6% 143);
     border: none;
+    text-align: center;
 }
 
 button:hover {
