--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ div {
     margin: 12.9rem 0 0 0;
     color: #ffffff;
     font-family: Norse;
-    font-size: 54px ;
+    font-size: 2.7rem;
 }
 .footer-credit {
     display: flex;
@@ -214,5 +214,9 @@ a, href{
 .cta-section {
     margin: 2rem 0;
     background-color: oklch(97% 0.5% 270);
-    
-} 
+    font-size: 1rem;
+}
+
+.cta-section h3 {
+    color: oklch(45% 5% 143);
+}
